Additional fix for table alignment, Issue #413

--- a/themes/default/fileext_textmode/screen.css
+++ b/themes/default/fileext_textmode/screen.css
@@ -15,7 +15,7 @@
 #FileExtTextModeDiv table{
 	overflow-y: scroll;
 	display: block;
-	height: 280px;
+	height: 300px;
 	margin-top: 0px;
 }
 
